[package]
name = "AdventOfCode2022"
version = "0.1.0"
authors = ["Mateusz Kwapich <mateusz@kwapich.it>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
maplit = "1.0.2"
multiset = "0.0.5"
regex = "1.7.0"
itertools = "0.10.5"
text_io = "0.1.12"

[[bin]]
name = "01a_calorie_counting"
path = "src/01a_calorie_counting.rs"

[[bin]]
name = "01b_calorie_counting"
path = "src/01b_calorie_counting.rs"

[[bin]]
name = "02a_rock_paper_scissors"
path = "src/02a_rock_paper_scissors.rs"

[[bin]]
name = "02b_rock_paper_scissors"
path = "src/02b_rock_paper_scissors.rs"

[[bin]]
name = "03a_rucksack_reorganizations"
path = "src/03a_rucksack_reorganizations.rs"

[[bin]]
name = "03b_rucksack_reorganizations"
path = "src/03b_rucksack_reorganizations.rs"

[[bin]]
name = "04a"
path = "src/04a.rs"

[[bin]]
name = "04b"
path = "src/04b.rs"

[[bin]]
name = "05a"
path = "src/05a.rs"

[[bin]]
name = "05b"
path = "src/05b.rs"

[[bin]]
name = "06a"
path = "src/06a.rs"

[[bin]]
name = "06b"
path = "src/06b.rs"