[package]
name = "AdventOfCode2022"
version = "0.1.0"
authors = ["Mateusz Kwapich <mateusz@kwapich.it>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
maplit = "1.0.2"
multiset = "0.0.5"
regex = "1.7.0"
itertools = "0.10.5"
text_io = "0.1.12"
scan-rules = "0.2.0"
json = "0.12.4"
serde_json = "1.0"
serde = { version = "1.0.150", features = ["derive"] }
smallset = "0.1.1"
rayon = "1.5"
gray-codes = "0.1.1"
multimap = "0.8.3"
strum = { version = "0.24", features = ["derive"] }

fixedbitset = "0.4.2"

[[bin]]
name = "01a_calorie_counting"
path = "src/01a_calorie_counting.rs"

[[bin]]
name = "01b_calorie_counting"
path = "src/01b_calorie_counting.rs"

[[bin]]
name = "02a_rock_paper_scissors"
path = "src/02a_rock_paper_scissors.rs"

[[bin]]
name = "02b_rock_paper_scissors"
path = "src/02b_rock_paper_scissors.rs"

[[bin]]
name = "03a_rucksack_reorganizations"
path = "src/03a_rucksack_reorganizations.rs"

[[bin]]
name = "03b_rucksack_reorganizations"
path = "src/03b_rucksack_reorganizations.rs"

[[bin]]
name = "04a"
path = "src/04a.rs"

[[bin]]
name = "04b"
path = "src/04b.rs"

[[bin]]
name = "05a"
path = "src/05a.rs"

[[bin]]
name = "05b"
path = "src/05b.rs"

[[bin]]
name = "06a"
path = "src/06a.rs"

[[bin]]
name = "06b"
path = "src/06b.rs"

[[bin]]
name = "07a"
path = "src/07a.rs"

[[bin]]
name = "07b"
path = "src/07b.rs"

[[bin]]
name = "08a"
path = "src/08a.rs"

[[bin]]
name = "08b"
path = "src/08b.rs"

[[bin]]
name = "09a"
path = "src/09a.rs"

[[bin]]
name = "09b"
path = "src/09b.rs"

[[bin]]
name = "10a"
path = "src/10a.rs"

[[bin]]
name = "10b"
path = "src/10b.rs"

[[bin]]
name = "11a"
path = "src/11a.rs"

[[bin]]
name = "11b"
path = "src/11b.rs"

[[bin]]
name = "12a"
path = "src/12a.rs"

[[bin]]
name = "12b"
path = "src/12b.rs"

[[bin]]
name = "13a"
path = "src/13a.rs"

[[bin]]
name = "13b"
path = "src/13b.rs"

[[bin]]
name = "14a"
path = "src/14a.rs"

[[bin]]
name = "14b"
path = "src/14b.rs"

[[bin]]
name = "15a"
path = "src/15a.rs"

[[bin]]
name = "15b"
path = "src/15b.rs"

[[bin]]
name = "16a"
path = "src/16a.rs"

[[bin]]
name = "16b"
path = "src/16b.rs"

[[bin]]
name = "17a"
path = "src/17a.rs"

[[bin]]
name = "17b"
path = "src/17b.rs"

[[bin]]
name = "18a"
path = "src/18a.rs"

[[bin]]
name = "18b"
path = "src/18b.rs"

[[bin]]
name = "19a"
path = "src/19a.rs"

[[bin]]
name = "19b"
path = "src/19b.rs"

[[bin]]
name = "20a"
path = "src/20a.rs"

[[bin]]
name = "20b"
path = "src/20b.rs"

[[bin]]
name = "21a"
path = "src/21a.rs"

[[bin]]
name = "21b"
path = "src/21b.rs"

[[bin]]
name = "22a"
path = "src/22a.rs"

[[bin]]
name = "22b"
path = "src/22b.rs"

[[bin]]
name = "23a"
path = "src/23a.rs"

[[bin]]
name = "23b"
path = "src/23b.rs"
